--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rebase",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "git流程验证",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/lizj-core/rebase#readme",
   "devDependencies": {
     "commitizen": "^4.2.4",
+    "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "^3.3.0"
   },
   "config": {
